--- a/hello-react/src/component/Footer/Footer.css
+++ b/hello-react/src/component/Footer/Footer.css
@@ -1,5 +1,6 @@
 .footer {
-    background-color: #f4f4f4;
+    /* background-color: #f4f4f4; */
+    background: linear-gradient(#f4f4f4, white);
     padding: 20px 0;
     text-align: center;
   }
@@ -12,8 +13,7 @@
   .social-links {
     list-style: none;
     padding: 0;
-    display: flex;
-    justify-content: center;
+    text-align: center;
   }
   
   .social-links li {
